# mongodb-llama-stack

./: .gitignore  LICENSE  README.md  pytest.ini  requirements-test.txt  requirements.txt  setup.py
docs/: contributing.md  examples.md  search_modes.md
examples/: demo.py
mongodb_llama_stack/: .env.example  main.py  pyproject.toml  run.yaml
mongodb_llama_stack/mongodb/: README.md  __init__.py  config.py  config_validator.py  connection_test.py  mongodb.py
mongodb_llama_stack/providers.d/remote/vector_io/: mongodb.yaml
mongodb_llama_stack/tests/: config_validator.py  connection_test.py
scripts/: build_and_test.sh
tests/: integration_test.py  test_mongodb_provider.py
